updating play manual

--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -46,7 +46,14 @@ The @fbconnect.button@ tag outputs a link that will prompt your users to authent
 
 bc. #{fbconnect.button label:'Login using your facebook account.' /}
 
-The tag takes two optional parameters. @label@ which defaults to *Sign in with Facebook*, and @cssClass@ which defaults to *play-fbconnect-button*.
+The tag takes three optional parameters. 
+- `label` which defaults to *Sign in with Facebook*
+- `cssClass` which defaults to *play-fbconnect-button*
+- `scope` which defaults to *email* (see [the facebook docs](http://developers.facebook.com/docs/authentication/permissions) for more details on scope)
+
+* @label@ which defaults to *Sign in with Facebook*
+* @cssClass@ which defaults to *play-fbconnect-button*
+* @scope@ which defaults to *email* (see "the facebook docs"(http://developers.facebook.com/docs/authentication/permissions) for more details on scope)
 
 h3. Define your OAuth callback
 
