--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -48,7 +48,7 @@ bc. #{fbconnect.button label:'Login using your facebook account.' /}
 
 * @label@ which defaults to *Sign in with Facebook*
 * @cssClass@ which defaults to *play-fbconnect-button*
-* @scope@ which defaults to *email* (see "this table":http://developers.facebook.com/docs/authentication/permissions for possible values of scope)
+* @scope@ which is excluded by default (see "this table":http://developers.facebook.com/docs/authentication/permissions for possible values of scope)
 
 h3. Define your OAuth callback
 
